my-apps/in-flow-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inflow
  labels:
    app.kubernetes.io/component: monitoring
